(iot-software-sensor) added health check at URL /actuator/health

--- a/components/iot-software-sensor/manifests/iot-software-sensor-dc-2.yaml
+++ b/components/iot-software-sensor/manifests/iot-software-sensor-dc-2.yaml
@@ -47,6 +47,25 @@ spec:
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+        livenessProbe: 
+          httpGet:   
+            path: /actuator/health
+            port: 8080
+          initialDelaySeconds: 15  
+          timeoutSeconds: 1
+          periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 15
+          timeoutSeconds: 1
+          periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 3
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
