Initial changes for edge-anomaly-detection

--- a/namespaces_and_operator_subscriptions/iotdemo/kustomization.yaml
+++ b/namespaces_and_operator_subscriptions/iotdemo/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
 - iotdemo-namespace.yaml
 - iotdemo-operatorgroup.yaml
 - amq-operator-subscription.yaml
+- odh-operator-subscription.yaml
