--- a/components/iot-consumer/manifests/kustomization.yaml
+++ b/components/iot-consumer/manifests/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 resources:
 - amq-broker.yaml
+- odh-instance.yaml
 - iot-consumer-bc.yaml
 - iot-consumer-dc.yaml
 - iot-consumer-is.yaml
