--- a/components/edge-anomaly-detection/manifests/kustomization.yaml
+++ b/components/edge-anomaly-detection/manifests/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- seldon-deployment-crd.yaml
 - edge-anomaly-detection-bc.yaml  
 - edge-anomaly-detection-route.yaml   
 - edge-anomaly-detection-is.yaml  
