--- a/components/iot-anomaly-detection/manifests/ito-anomaly-detection-is.yaml
+++ b/components/iot-anomaly-detection/manifests/ito-anomaly-detection-is.yaml
@@ -1,7 +1,7 @@
 kind: ImageStream
 apiVersion: v1
 metadata:
-  name: edge-anomaly-detection
+  name: ito-anomaly-detection
   labels:
     component: serving
 spec:
