--- a/components/iot-anomaly-detection/manifests/ito-anomaly-detection-seldon.yaml
+++ b/components/iot-anomaly-detection/manifests/ito-anomaly-detection-seldon.yaml
@@ -17,7 +17,7 @@ spec:
     - spec:
         containers:
           - name: anomaly-detection
-            image: edge-anomaly-detection:latest
+            image: ito-anomaly-detection:latest
             env:
             - name: MODEL_VERSION
               value: "1"
