--- a/quickstart/03_components/kustomization.yaml
+++ b/quickstart/03_components/kustomization.yaml
@@ -1,5 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: iotdemo
+
 bases:
-  - ../../components
+  - ../../components/iot-consumer/manifests
+  - ../../components/iot-frontend/manifests
+  - ../../components/iot-software-sensor/manifests
