--- a/components/iot-consumer/package.json
+++ b/components/iot-consumer/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "log4js": "^4.5.1",
+    "request-promise": "^4.2.5",
     "socket.io": "^2.3.0"
   },
   "keywords": [
