--- a/components/iot-consumer/manifests/iot-consumer-bc.yaml
+++ b/components/iot-consumer/manifests/iot-consumer-bc.yaml
@@ -17,6 +17,7 @@ spec:
   source:
     git:
       uri: https://github.com/sa-mw-dach/manuela-dev.git
+      ref: "Integrate-anomaly-detection"
     type: Git
     contextDir: "components/iot-consumer"
   strategy:
