--- a/namespaces_and_operator_subscriptions/iotdemo/kustomization.yaml
+++ b/namespaces_and_operator_subscriptions/iotdemo/kustomization.yaml
@@ -10,4 +10,6 @@ resources:
 - iotdemo-namespace.yaml
 - iotdemo-operatorgroup.yaml
 - amq-operator-subscription.yaml
-- odh-operator-subscription.yaml
+
+# Open data hub is optional
+# - odh-operator-subscription.yaml
