--- a/components/kustomization.yaml
+++ b/components/kustomization.yaml
@@ -8,7 +8,10 @@ bases:
 - iot-consumer/manifests
 - iot-frontend/manifests
 - iot-software-sensor/manifests
-- iot-anomaly-detection/manifests
+
+# Open data hub is optional
+# - iot-anomaly-detection/manifests
+
 #the following causes an error if the rolebindings admin and view have already been created
 #- ../namespaces_and_operator_subscriptions/iotdemo
 
