add route configuration for argocd server

--- a/infrastructure/argocd/argocd.yaml
+++ b/infrastructure/argocd/argocd.yaml
@@ -4,6 +4,8 @@ metadata:
   name: argocd
   namespace: argocd
 spec:
+  server:
+    route: true
   dex:
     image: quay.io/ablock/dex
     openShiftOAuth: true
