--- a/components/iot-software-sensor-quarkus/src/main/resources/application.properties
+++ b/components/iot-software-sensor-quarkus/src/main/resources/application.properties
@@ -13,6 +13,7 @@ mqtt.host = ${MQTT_HOST:broker-amq-mqtt-all-0-svc-rte-oschneid-amq.apps.ocp4.sto
 mqtt.port = ${MQTT_PORT:80}
 
 mqtt.temperature.topic=iot-sensor/sw/temperature
+mqtt.vibration.topic=iot-sensor/sw/vibration
 
 # Sensor Temperature
 sensor.temperature.enabled=${SENSOR_TEMPERATURE_ENABLED:true}
@@ -23,6 +24,16 @@ sensor.temperature.minRange=${SENSOR_TEMPERATURE_MINRANGE:65}
 sensor.temperature.maxRange=${SENSOR_TEMPERATURE_MAXRANGE:75}
 sensor.temperature.minIteration=${SENSOR_TEMPERATURE_MINITERATION:0}
 sensor.temperature.maxIteration=${SENSOR_TEMPERATURE_MAXITERATION:1}
+
+# Sensor Vibration
+sensor.vibration.enabled=${SENSOR_VIBRATION_ENABLED:true}
+sensor.vibration.frequency=${SENSOR_VIBRATION_FREQUENCY:3000}
+sensor.vibration.start=${SENSOR_VIBRATION_START:15}
+sensor.vibration.minRange=${SENSOR_VIBRATION_MINRANGE:14}
+sensor.vibration.maxRange=${SENSOR_VIBRATION_MAXRANGE:16}
+sensor.vibration.minIteration=${SENSOR_VIBRATION_MINITERATION:0}
+sensor.vibration.maxIteration=${SENSOR_VIBRATION_MAXITERATION:1}
+sensor.vibration.peakInterval=${SENSOR_VIBRATION_PEAKINTETVAL:20}
 
 # Camel
 camel.context.name = quarkus-camel-iot-software-sensor
