--- a/components/iot-software-sensor-quarkus/src/main/resources/application.properties
+++ b/components/iot-software-sensor-quarkus/src/main/resources/application.properties
@@ -14,9 +14,10 @@ mqtt.port = ${MQTT_PORT:80}
 
 mqtt.temperature.topic=iot-sensor/sw/temperature
 mqtt.vibration.topic=iot-sensor/sw/vibration
+mqtt.gps.topic=iot-sensor/sw/gps
 
 # Sensor Temperature
-sensor.temperature.enabled=${SENSOR_TEMPERATURE_ENABLED:true}
+sensor.temperature.enabled=${SENSOR_TEMPERATURE_ENABLED:false}
 sensor.temperature.frequency=${SENSOR_TEMPERATURE_FREQUENCY:3000}
 sensor.temperature.startMin=${SENSOR_TEMPERATURE_STARTMIN:65}
 sensor.temperature.startMax=${SENSOR_TEMPERATURE_STARTMAX:65}
@@ -26,7 +27,7 @@ sensor.temperature.minIteration=${SENSOR_TEMPERATURE_MINITERATION:0}
 sensor.temperature.maxIteration=${SENSOR_TEMPERATURE_MAXITERATION:1}
 
 # Sensor Vibration
-sensor.vibration.enabled=${SENSOR_VIBRATION_ENABLED:true}
+sensor.vibration.enabled=${SENSOR_VIBRATION_ENABLED:false}
 sensor.vibration.frequency=${SENSOR_VIBRATION_FREQUENCY:3000}
 sensor.vibration.start=${SENSOR_VIBRATION_START:15}
 sensor.vibration.minRange=${SENSOR_VIBRATION_MINRANGE:14}
@@ -34,6 +35,16 @@ sensor.vibration.maxRange=${SENSOR_VIBRATION_MAXRANGE:16}
 sensor.vibration.minIteration=${SENSOR_VIBRATION_MINITERATION:0}
 sensor.vibration.maxIteration=${SENSOR_VIBRATION_MAXITERATION:1}
 sensor.vibration.peakInterval=${SENSOR_VIBRATION_PEAKINTETVAL:20}
+
+# Sensor GPS
+sensor.gps.enabled=${SENSOR_GPS_ENABLED:false}
+sensor.gps.frequency=${SENSOR_GPS_FREQUENCY:5000}
+sensor.gps.initialLatitude=${SENSOR_GPS_INITIAL_LATITUDE:42.579258}
+sensor.gps.initialLongitude=${SENSOR_GPS_INITIAL_LONGITUDE:-71.437841}
+sensor.gps.iterationLatitude=${SENSOR_GPS_ITERATION_LATITUDE:-0.009}
+sensor.gps.iterationLongitude=${SENSOR_GPS_ITERATION_LONGITUDE:-0.012}
+sensor.gps.finalLatitude=${SENSOR_GPS_FINAL_LATITUDE:40.689879}
+sensor.gps.finalLongitude=${SENSOR_GPS_FINAL_LONGITUDE:-73.992895}
 
 # Camel
 camel.context.name = quarkus-camel-iot-software-sensor
