--- a/components/iot-software-sensor-quarkus/src/main/resources/application.properties
+++ b/components/iot-software-sensor-quarkus/src/main/resources/application.properties
@@ -15,6 +15,7 @@ mqtt.port = ${MQTT_PORT:80}
 mqtt.temperature.topic=iot-sensor/sw/temperature
 mqtt.vibration.topic=iot-sensor/sw/vibration
 mqtt.gps.topic=iot-sensor/sw/gps
+mqtt.light.topic=iot-sensor/sw/light
 
 # Sensor Temperature
 sensor.temperature.enabled=${SENSOR_TEMPERATURE_ENABLED:false}
@@ -45,6 +46,15 @@ sensor.gps.iterationLatitude=${SENSOR_GPS_ITERATION_LATITUDE:-0.009}
 sensor.gps.iterationLongitude=${SENSOR_GPS_ITERATION_LONGITUDE:-0.012}
 sensor.gps.finalLatitude=${SENSOR_GPS_FINAL_LATITUDE:40.689879}
 sensor.gps.finalLongitude=${SENSOR_GPS_FINAL_LONGITUDE:-73.992895}
+
+# Sensor Light
+sensor.light.enabled=${SENSOR_LIGHT_ENABLED:false}
+sensor.light.frequency=${SENSOR_LIGHT_FREQUENCY:3000}
+sensor.light.start=${SENSOR_LIGHT_START:0}
+sensor.light.minRange=${SENSOR_LIGHT_MINRANGE:0}
+sensor.light.maxRange=${SENSOR_LIGHT_MAXRANGE:25000}
+sensor.light.minIteration=${SENSOR_LIGHT_MINITERATION:0}
+sensor.light.maxIteration=${SENSOR_LIGHT_MAXITERATION:3}
 
 # Camel
 camel.context.name = quarkus-camel-iot-software-sensor
