--- a/components/iot-software-sensor-quarkus/src/main/resources/application.properties
+++ b/components/iot-software-sensor-quarkus/src/main/resources/application.properties
@@ -12,10 +12,10 @@ mqtt.password = ${MQTT_PASSWORD:iotuser}
 mqtt.host = ${MQTT_HOST:broker-amq-mqtt-all-0-svc-rte-oschneid-amq.apps.ocp4.stormshift.coe.muc.redhat.com}
 mqtt.port = ${MQTT_PORT:80}
 
-mqtt.temperature.topic=iot-sensor/sw/temperature
-mqtt.vibration.topic=iot-sensor/sw/vibration
-mqtt.gps.topic=iot-sensor/sw/gps
-mqtt.light.topic=iot-sensor/sw/light
+mqtt.temperature.topic=${MQTT_TEMPERATURE_TOPIC:iot-sensor/sw/temperature}
+mqtt.vibration.topic=${MQTT_VIBRATION_TOPIC:iot-sensor/sw/vibration}
+mqtt.gps.topic=${MQTT_GPS_TOPIC:iot-sensor/sw/gps}
+mqtt.light.topic=${MQTT_LIGHT_TOPIC:iot-sensor/sw/light}
 
 # Sensor Temperature
 sensor.temperature.enabled=${SENSOR_TEMPERATURE_ENABLED:false}
