(quarkus-sensor) register Resource Bundle

--- a/components/iot-software-sensor-quarkus/src/main/resources/application.properties
+++ b/components/iot-software-sensor-quarkus/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Quarkus
 quarkus.log.file.enable = false
 quarkus.ssl.native=true
+quarkus.native.additional-build-args=-H:IncludeResourceBundles=org.eclipse.paho.client.mqttv3.internal.nls.logcat
 
 # Sensor
 machine.id=${MACHINE_ID:quarkus-pump-2802}
