--- a/tekton/tasks/argocd-task-sync-and-wait.yaml
+++ b/tekton/tasks/argocd-task-sync-and-wait.yaml
@@ -1,23 +1,22 @@
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: argocd-task-sync-and-wait
 spec:
-  inputs:
-    params:
-      - name: application-name
-        type: string
-        description: name of the application to sync
-      - name: revision
-        type: string
-        description: the revision to sync to
-        default: HEAD
-      - name: flags
-        type: string
-        default: --
-      - name: argocd-version
-        type: string
-        default: v1.0.2
+  params:
+  - name: application-name
+    type: string
+    description: name of the application to sync
+  - name: revision
+    type: string
+    description: the revision to sync to
+    default: HEAD
+  - name: flags
+    type: string
+    default: --
+  - name: argocd-version
+    type: string
+    default: v1.0.2
   stepTemplate:
     envFrom:
       - configMapRef:
