--- a/tekton/tasks/github-add-pull-request.yaml
+++ b/tekton/tasks/github-add-pull-request.yaml
@@ -1,31 +1,29 @@
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: github-add-pull-request
 spec:
-  inputs:
-    params:
-    - name: PULL_REQUEST_BODY
-      description: The body to be used for the pull request
-      type: string
-      default: ""
-    - name: PULL_REQUEST_TITLE
-      description: Title of the pull request
-      type: string
-      default: "Pull request created by Tekton task github-add-pull-request"
-    - name: GITHUB_REPO
-      description: The github owner/repo to use
-      type: string
-      default: sa-mw-dach/manuela-gitops
-    - name: GIT_BRANCH_HEAD
-      description: The branch to pull from
-      type: string
-      default: approve
-    - name: GIT_BRANCH_BASE
-      description: The branch to pull into
-      type: string
-      default: master
-    resources: []
+  params:
+  - name: PULL_REQUEST_BODY
+    description: The body to be used for the pull request
+    type: string
+    default: ""
+  - name: PULL_REQUEST_TITLE
+    description: Title of the pull request
+    type: string
+    default: "Pull request created by Tekton task github-add-pull-request"
+  - name: GITHUB_REPO
+    description: The github owner/repo to use
+    type: string
+    default: sa-mw-dach/manuela-gitops
+  - name: GIT_BRANCH_HEAD
+    description: The branch to pull from
+    type: string
+    default: approve
+  - name: GIT_BRANCH_BASE
+    description: The branch to pull into
+    type: string
+    default: master
   steps:
   - name: create-pull-request
     image: curlimages/curl
