--- a/tekton/tasks/skopeo-copy.yaml
+++ b/tekton/tasks/skopeo-copy.yaml
@@ -1,10 +1,10 @@
 kind: Task
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 metadata:
   name: skopeo-copy
 spec:
-  inputs:
-    resources:
+  resources:
+    inputs:
     - name: source
       type: git
       targetPath: git-repo
@@ -12,9 +12,9 @@ spec:
       type: image 
     - name: local-image
       type: image
-    params:
-    - name: PATH_CONTEXT
-      type: string  
+  params:
+  - name: PATH_CONTEXT
+    type: string  
   steps:
   - name: skopeo-copy
     image: quay.io/redhat-emea-ssa-team/skopeo-ubi:latest
