--- a/components/iot-software-sensor-quarkus/src/main/resources/application.properties
+++ b/components/iot-software-sensor-quarkus/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Quarkus
-quarkus.log.file.enable = false
+quarkus.log.file.enable=false
+quarkus.log.level=INFO
 quarkus.ssl.native=true
 quarkus.native.additional-build-args=-H:IncludeResourceBundles=org.eclipse.paho.client.mqttv3.internal.nls.logcat
 
@@ -59,4 +60,7 @@ sensor.light.maxIteration=${SENSOR_LIGHT_MAXITERATION:3}
 
 # Camel
 camel.context.name = quarkus-camel-iot-software-sensor
+# bean introspection to log reflection based configuration
+camel.main.beanIntrospectionExtendedStatistics=true
+camel.main.beanIntrospectionLoggingLevel=INFO
 
