set route=true to ensure route is created with ArgoCD operator 0.0.6

--- a/infrastructure/argocd/argocd.yaml
+++ b/infrastructure/argocd/argocd.yaml
@@ -1,11 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ArgoCD
 metadata:
-  name: argocd
+  name: argocdinstance
   namespace: argocd
 spec:
   server:
     route: true
+    host: argocd
+    ingress: false
+    insecure: false
+    resources: {}
   dex:
     image: quay.io/ablock/dex
     openShiftOAuth: true
