(quarkus-sensor) added configurable mqtt protocol

--- a/components/iot-software-sensor-quarkus/src/main/resources/application.properties
+++ b/components/iot-software-sensor-quarkus/src/main/resources/application.properties
@@ -13,6 +13,7 @@ mqtt.username = ${MQTT_USER:iotuser}
 mqtt.password = ${MQTT_PASSWORD:iotuser}
 mqtt.host = ${MQTT_HOST:broker-amq-mqtt-all-0-svc-rte-oschneid-amq.apps.ocp4.stormshift.coe.muc.redhat.com}
 mqtt.port = ${MQTT_PORT:80}
+mqtt.protocol=${MQTT_PROTOCOL:ws}
 
 mqtt.temperature.topic=${MQTT_TEMPERATURE_TOPIC:iot-sensor/sw/temperature}
 mqtt.vibration.topic=${MQTT_VIBRATION_TOPIC:iot-sensor/sw/vibration}
@@ -20,7 +21,7 @@ mqtt.gps.topic=${MQTT_GPS_TOPIC:iot-sensor/sw/gps}
 mqtt.light.topic=${MQTT_LIGHT_TOPIC:iot-sensor/sw/light}
 
 # Sensor Temperature
-sensor.temperature.enabled=${SENSOR_TEMPERATURE_ENABLED:false}
+sensor.temperature.enabled=${SENSOR_TEMPERATURE_ENABLED:true}
 sensor.temperature.frequency=${SENSOR_TEMPERATURE_FREQUENCY:3000}
 sensor.temperature.startMin=${SENSOR_TEMPERATURE_STARTMIN:65}
 sensor.temperature.startMax=${SENSOR_TEMPERATURE_STARTMAX:65}
