revert argocd name back + bump argocd version

--- a/infrastructure/argocd/argocd.yaml
+++ b/infrastructure/argocd/argocd.yaml
@@ -1,12 +1,11 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ArgoCD
 metadata:
-  name: argocdinstance
+  name: argocd
   namespace: argocd
 spec:
   server:
     route: true
-    host: argocd
     ingress: false
     insecure: false
     resources: {}
