--- a/tekton/tasks/github-add-comment.yaml
+++ b/tekton/tasks/github-add-comment.yaml
@@ -37,7 +37,7 @@ spec:
         import urllib.parse
 
         split_url = urllib.parse.urlparse(
-            "$(inputs.params.REQUEST_URL)").path.split("/")
+            "$(params.REQUEST_URL)").path.split("/")
 
         # This will convert https://github.com/foo/bar/pull/202 to
         # api url path /repos/foo/issues/202
@@ -46,7 +46,7 @@ spec:
 
         # Trying to avoid quotes issue as much as possible by using triple
         # quotes
-        comment = """$(inputs.params.COMMENT)"""
+        comment = """$(params.COMMENT)"""
         data = {
             "body": comment,
         }
@@ -54,7 +54,7 @@ spec:
         print("Sending this data to GitHub: ")
         print(data)
 
-        conn = http.client.HTTPSConnection("$(inputs.params.GITHUB_HOST_URL)")
+        conn = http.client.HTTPSConnection("$(params.GITHUB_HOST_URL)")
         r = conn.request(
             "POST",
             api_url + "/comments",
@@ -69,4 +69,4 @@ spec:
             print(resp.read())
         else:
           print("a GitHub comment has been added to "
-                "$(inputs.params.REQUEST_URL)")
+                "$(params.REQUEST_URL)")
