--- a/tekton/tasks/gitops-imagetag.yaml
+++ b/tekton/tasks/gitops-imagetag.yaml
@@ -54,13 +54,13 @@ spec:
     image: alpine/git
     script: |
         #!/usr/bin/env sh
-        if [ "$(inputs.params.GIT_BRANCH)" != "master" ]; then
+        if [ "$(params.GIT_BRANCH)" != "master" ]; then
           git fetch 2>&1
-          echo 'Creating and checking out branch $(inputs.params.GIT_BRANCH)'
-          git checkout -q --track -b $(inputs.params.GIT_BRANCH) origin/$(inputs.params.GIT_BRANCH) 2>&1 || git checkout -q -b $(inputs.params.GIT_BRANCH) 2>&1
+          echo 'Creating and checking out branch $(params.GIT_BRANCH)'
+          git checkout -q --track -b $(params.GIT_BRANCH) origin/$(params.GIT_BRANCH) 2>&1 || git checkout -q -b $(params.GIT_BRANCH) 2>&1
           git branch
 
-          #echo 'merging master into $(inputs.params.GIT_BRANCH)'
+          #echo 'merging master into $(params.GIT_BRANCH)'
           #git merge master 2>&1
         fi
     workingdir: /workspace/source-gitops
@@ -68,20 +68,20 @@ spec:
     image: mikefarah/yq:3.2.1
     script: |
         #!/usr/bin/env sh
-        semver=$(cat /workspace/source-semver/$(inputs.params.VERSION_PATH))
+        semver=$(cat /workspace/source-semver/$(params.VERSION_PATH))
         echo $semver
-        echo 'Patching $(inputs.params.KUSTOMIZATION_YAML_PATH)'
+        echo 'Patching $(params.KUSTOMIZATION_YAML_PATH)'
         #echo ''
-        #cat $(inputs.params.KUSTOMIZATION_YAML_PATH)
+        #cat $(params.KUSTOMIZATION_YAML_PATH)
         echo ''
-        yq w -i $(inputs.params.KUSTOMIZATION_YAML_PATH) '$(inputs.params.YAML_PATH)' $semver
+        yq w -i $(params.KUSTOMIZATION_YAML_PATH) '$(params.YAML_PATH)' $semver
         #echo ''
-        #cat $(inputs.params.KUSTOMIZATION_YAML_PATH)
-        if [ ! -z "$(inputs.params.IMAGESTREAM_PATH)" ]; then
-          echo "Adding $semver to image stream $(inputs.params.IMAGESTREAM_PATH)"
-          echo "{\"spec\":{\"tags\":[{\"name\":\"$semver\",\"from\":{\"kind\":\"DockerImage\",\"name\":\"$(inputs.params.REMOTE_IMAGE):$semver\"},\"importPolicy\":{},\"referencePolicy\":{\"type\":\"Local\"}}]}}" | yq -P m -i -a $(inputs.params.IMAGESTREAM_PATH) -
-          if [ $(yq r $(inputs.params.IMAGESTREAM_PATH) --length spec.tags) -gt $(inputs.params.TRUNCATE_IMAGESTREAM_TAGS_AFTER) ]; then
-            yq -P d -i $(inputs.params.IMAGESTREAM_PATH) 'spec.tags[0]'
+        #cat $(params.KUSTOMIZATION_YAML_PATH)
+        if [ ! -z "$(params.IMAGESTREAM_PATH)" ]; then
+          echo "Adding $semver to image stream $(params.IMAGESTREAM_PATH)"
+          echo "{\"spec\":{\"tags\":[{\"name\":\"$semver\",\"from\":{\"kind\":\"DockerImage\",\"name\":\"$(params.REMOTE_IMAGE):$semver\"},\"importPolicy\":{},\"referencePolicy\":{\"type\":\"Local\"}}]}}" | yq -P m -i -a $(params.IMAGESTREAM_PATH) -
+          if [ $(yq r $(params.IMAGESTREAM_PATH) --length spec.tags) -gt $(params.TRUNCATE_IMAGESTREAM_TAGS_AFTER) ]; then
+            yq -P d -i $(params.IMAGESTREAM_PATH) 'spec.tags[0]'
           fi
         fi
     workingdir: /workspace/source-gitops
@@ -103,11 +103,11 @@ spec:
         git diff
         echo "https://$GITHUB_USER:$GITHUB_TOKEN@github.com" > ~/.git-credentials
         git config --global credential.helper store 'store --file ~/.git-credentials'
-        git config --global user.email "$(inputs.params.GIT_EMAIL)"
-        git config --global user.name "$(inputs.params.GIT_USERNAME)"
+        git config --global user.email "$(params.GIT_EMAIL)"
+        git config --global user.name "$(params.GIT_USERNAME)"
         echo ''
         echo 'Adding changes to git index'
         git add .
-        git commit -m '$(inputs.params.GIT_COMMENT)'
-        git push --set-upstream origin $(inputs.params.GIT_BRANCH)
+        git commit -m '$(params.GIT_COMMENT)'
+        git push --set-upstream origin $(params.GIT_BRANCH)
     workingdir: /workspace/source-gitops  
