--- a/tekton/tasks/skopeo-copy.yaml
+++ b/tekton/tasks/skopeo-copy.yaml
@@ -20,7 +20,7 @@ spec:
     image: quay.io/redhat-emea-ssa-team/skopeo-ubi:latest
     script: |
       #!/usr/bin/env bash
-      cd git-repo/$(inputs.params.PATH_CONTEXT)/
+      cd git-repo/$(params.PATH_CONTEXT)/
       export SEMVER=$(cat VERSION)
-      echo skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(inputs.resources.local-image.url):$SEMVER docker://$(inputs.resources.remote-image.url):$SEMVER
-      skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(inputs.resources.local-image.url):$SEMVER docker://$(inputs.resources.remote-image.url):$SEMVER
+      echo skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(resources.inputs.local-image.url):$SEMVER docker://$(resources.inputs.remote-image.url):$SEMVER
+      skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(resources.inputs.local-image.url):$SEMVER docker://$(resources.inputs.remote-image.url):$SEMVER
