--- a/tekton/tasks/skopeo-tag-image.yaml
+++ b/tekton/tasks/skopeo-tag-image.yaml
@@ -18,7 +18,7 @@ spec:
     image: quay.io/redhat-emea-ssa-team/skopeo-ubi:latest
     script: |
       #!/usr/bin/env bash
-      cd git-repo/$(inputs.params.PATH_CONTEXT)/
+      cd git-repo/$(params.PATH_CONTEXT)/
       export SEMVER=$(cat VERSION)
-      echo skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(inputs.resources.image.url) docker://$(inputs.resources.image.url):$SEMVER
-      skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(inputs.resources.image.url) docker://$(inputs.resources.image.url):$SEMVER
+      echo skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(resources.inputs.image.url) docker://$(resources.inputs.image.url):$SEMVER
+      skopeo copy --authfile=/pushsecret/.dockerconfigjson --src-tls-verify=false --dest-tls-verify=false docker://$(resources.inputs.image.url) docker://$(resources.inputs.image.url):$SEMVER
