(tekton) added iot-anomaly manifests to Kustomize

--- a/tekton/pipeline-resources/kustomization.yaml
+++ b/tekton/pipeline-resources/kustomization.yaml
@@ -7,4 +7,6 @@ resources:
 - quay-frontend-image.yaml
 - ocp-sensor-image.yaml
 - quay-sensor-image.yaml
+- ocp-anomaly-detection-image.yaml
+- quay-anomaly-detection-image.yaml
 
