--- a/tekton/pipelines/kustomization.yaml
+++ b/tekton/pipelines/kustomization.yaml
@@ -2,5 +2,6 @@ resources:
 - iot-consumer-pipeline.yaml
 - iot-frontend-pipeline.yaml
 - iot-software-sensor-pipeline.yaml
+- iot-anomaly-detection-pipeline.yaml
 
 
