(sensor-quarkus) Build config change and .gitignore

--- a/components/iot-software-sensor-quarkus/manifests/iot-software-sensor-quarkus-bc.yaml
+++ b/components/iot-software-sensor-quarkus/manifests/iot-software-sensor-quarkus-bc.yaml
@@ -19,7 +19,7 @@ spec:
   runPolicy: Serial
   source:
     git:
-      ref: camel-quarkus-sensor
+      ref: master
       uri: https://github.com/sa-mw-dach/manuela-dev.git
     type: Git
     contextDir: "components/iot-software-sensor-quarkus"
