--- a/gitops-repo-example/config/templates/manuela/machine-sensor/machine-sensor-1-deployment.yaml
+++ b/gitops-repo-example/config/templates/manuela/machine-sensor/machine-sensor-1-deployment.yaml
@@ -23,7 +23,7 @@ spec:
       containers:
       - name: machine-sensor
         image: machine-sensor:latest
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
           - containerPort: 8778
             name: jolokia
