--- a/gitops-repo-example/config/templates/manuela/messaging/messaging-deployment.yaml
+++ b/gitops-repo-example/config/templates/manuela/messaging/messaging-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - image: messaging
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         name: messaging
         ports:
         - containerPort: 3000
