--- a/components/iot-software-sensor/manifests/iot-software-sensor-dc.yaml
+++ b/components/iot-software-sensor/manifests/iot-software-sensor-dc.yaml
@@ -30,7 +30,7 @@ spec:
       containers:
       - name: iot-software-sensor
         image: iot-software-sensor:latest
-        imagePullPolicy: Always
+        #imagePullPolicy: Always
         ports:
           - containerPort: 8778
             name: jolokia
