--- a/quickstart/03_components.yaml
+++ b/quickstart/03_components.yaml
@@ -14,18 +14,21 @@ subjects:
 ---
 apiVersion: v1
 data:
+  ANOMALY_DETECTION_URL: http://anomaly-detection-anomaly-detection:8000
   MQTT_BROKER: ws://broker-amq-mqtt-all-0-svc:61616
   MQTT_PASSWORD: iotuser
   MQTT_USER: iotuser
   PORT: "3000"
   SOCKET_PATH: /api/service-web/socket
-  TEMPERATURE_ALERT_ENABLED: "true"
+  TEMPERATURE_ALERT_ENABLED: "false"
   TEMPERATURE_THRESHOLD: "70.0"
   TOPIC_GPS: iot-sensor/sw/gps
   TOPIC_LIGHT: iot-sensor/sw/light
   TOPIC_TEMPERATURE: iot-sensor/sw/temperature
   TOPIC_VIBRATION: iot-sensor/sw/vibration
   VIBRATION_ALERT_ENABLED: "false"
+  VIBRATION_ANOMALY_ENABLED: "false"
+  VIBRATION_ANOMALY_PUMP: floor-1-line-1-extruder-1pump-2
 kind: ConfigMap
 metadata:
   name: iot-consumer-cfg
@@ -35,7 +38,7 @@ apiVersion: v1
 data:
   config.json: |-
     {
-        "websocketHost": "http://iot-consumer-iotdemo.apps.ocp4.stormshift.coe.muc.redhat.com",
+        "websocketHost": "http://iot-consumer-iotdemo.apps.ocp3.stormshift.coe.muc.redhat.com",
         "websocketPath": "/api/service-web/socket",
         "SERVER_TIMEOUT": 20000
     }
@@ -213,7 +216,6 @@ spec:
         - configMapRef:
             name: iot-consumer-cfg
         image: iot-consumer:latest
-        imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
           httpGet:
@@ -289,7 +291,6 @@ spec:
     spec:
       containers:
       - image: iot-frontend:latest
-        imagePullPolicy: Always
         name: iot-frontend
         ports:
         - containerPort: 8080
@@ -358,7 +359,6 @@ spec:
         - configMapRef:
             name: iot-software-sensor-config
         image: iot-software-sensor:latest
-        imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
           httpGet:
@@ -444,7 +444,6 @@ spec:
         - configMapRef:
             name: iot-software-sensor-2-config
         image: iot-software-sensor:latest
-        imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
           httpGet:
