--- a/components/iot-frontend/manifests/iot-frontend-dc.yaml
+++ b/components/iot-frontend/manifests/iot-frontend-dc.yaml
@@ -37,6 +37,26 @@ spec:
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
+        livenessProbe: 
+          httpGet:   
+            path: /home
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 15  
+          timeoutSeconds: 1
+          periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /home
+            port: 8080
+            scheme: HTTP
+          initialDelaySeconds: 15
+          timeoutSeconds: 1
+          periodSeconds: 10
+          successThreshold: 1
+          failureThreshold: 3
         volumeMounts:
             - mountPath: /opt/app-root/output/conf/config.json
               name: iot-frontend-cfg-vol
