--- a/components/iot-software-sensor-quarkus/manifests/iot-software-sensor-quarkus-cm.yaml
+++ b/components/iot-software-sensor-quarkus/manifests/iot-software-sensor-quarkus-cm.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  labels:
+    app: iot-software-sensor-quarkus
   name: iot-software-sensor-quarkus-config
 data:
   DEVICE_ID: sensor-cq
