--- a/components/iot-software-sensor-quarkus/manifests/iot-software-sensor-quarkus-is.yaml
+++ b/components/iot-software-sensor-quarkus/manifests/iot-software-sensor-quarkus-is.yaml
@@ -2,7 +2,7 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   labels:
-    application: iot-software-sensor-quarkus
+    app: iot-software-sensor-quarkus
   name: iot-software-sensor-quarkus
 spec:
   lookupPolicy:
