--- a/components/iot-software-sensor-quarkus/manifests/kustomization.yaml
+++ b/components/iot-software-sensor-quarkus/manifests/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- iot-software-sensor-quarkus-builder-is.yaml
 - iot-software-sensor-quarkus-is.yaml
 - iot-software-sensor-quarkus-cm.yaml
 - iot-software-sensor-quarkus-bc.yaml
