--- a/tekton2/templates/kustomization.yaml
+++ b/tekton2/templates/kustomization.yaml
@@ -3,4 +3,8 @@ kind: Kustomization
 
 resources:
 - build-iot-consumer.yaml
+- build-iot-frontend.yaml
+- build-iot-software-sensor.yaml
+- build-iot-anomaly-detection.yaml
 - stage-production-pipelinerun.yaml
+- seed.yaml
