--- a/tekton2/persistent-volume-claims/kustomization.yaml
+++ b/tekton2/persistent-volume-claims/kustomization.yaml
@@ -3,4 +3,8 @@ kind: Kustomization
 
 resources:
 - iot-consumer.yaml
+- iot-frontend.yaml
+- iot-software-sensor.yaml
+- iot-anomaly-detection.yaml
 - stage-production.yaml
+- maven-repo.yaml
