--- a/tekton2/templates/build-iot-software-sensor.yaml
+++ b/tekton2/templates/build-iot-software-sensor.yaml
@@ -1,22 +1,15 @@
 apiVersion: v1
 kind: Template
 metadata:
-  name: stage-production-pipelinerun
+  name: build-iot-software-sensor
 objects:
 - apiVersion: tekton.dev/v1beta1
   kind: PipelineRun
   metadata:
-    generateName: stage-production-${COMPONENT_NAME}-
+    generateName: build-and-test-iot-software-sensor-
   spec:
     pipelineRef:
-      name: stage-production
-    params:
-    - name: TAG
-      value: ${TAG}
-    - name: SOURCE_IMAGE
-      value: ${SOURCE_IMAGE}
-    - name: CONFIGMAP_PREFIX
-      value: ${CONFIGMAP_PREFIX}
+      name: build-and-test
     workspaces:
     - name: config
       configMap:
@@ -27,9 +20,6 @@ objects:
     - name: argocd-env-secret
       secret:
         secretName: argocd-env
-    - name: quay-secret
-      secret:
-        secretName: quay-build-secret
     - name: gitrepos
       # volumeClaimTemplate:
       #   spec:
@@ -39,9 +29,15 @@ objects:
       #       requests:
       #         storage: 1Gi
       persistentVolumeClaim:
-        claimName: stage-production
-parameters:
-- name: TAG
-- name: SOURCE_IMAGE
-- name: CONFIGMAP_PREFIX
-- name: COMPONENT_NAME
+        claimName: iot-software-sensor
+    params:
+    - name: S2I_BUILDER_IMAGE
+      value: registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift
+    - name: LOCAL_IMAGE
+      value: image-registry.openshift-image-registry.svc:5000/manuela-tst-all/machine-sensor
+    - name: PATH_CONTEXT
+      value: components/iot-software-sensor
+    - name: COMPONENT_NAME
+      value: iot-swsensor
+    - name: CONFIGMAP_PREFIX
+      value: IOT_SWSENSOR
