--- a/components/iot-anomaly-detection/manifests/iot-anomaly-detection-seldon.yaml
+++ b/components/iot-anomaly-detection/manifests/iot-anomaly-detection-seldon.yaml
@@ -19,12 +19,8 @@ spec:
           - name: anomaly-detection
             image: iot-anomaly-detection:latest
             env:
-            - name: MODEL_VERSION
-              value: "1"
-            - name: MODEL_STDDEV_MULTIPLIER
-              value: "3"
-            - name: MODEL_WINDOW_SIZE
-              value: "5"
+            - name: MODEL_FIILE
+              value: "model.joblib"
     graph:
       children: []
       endpoint:
