--- a/components/iot-consumer/manifests/iot-consumer-configmap.yaml
+++ b/components/iot-consumer/manifests/iot-consumer-configmap.yaml
@@ -14,9 +14,8 @@ data:
   TOPIC_VIBRATION: iot-sensor/sw/vibration
   TOPIC_LIGHT: iot-sensor/sw/light
   TEMPERATURE_ALERT_ENABLED: 'false'
-  VIBRATION_ALERT_ENABLED: 'false'
+  VIBRATION_ALERT_ENABLED: 'true'
   VIBRATION_ANOMALY_ENABLED: 'false'
-  VIBRATION_ANOMALY_PUMP: 'floor-1-line-1-extruder-1pump-2'
   ANOMALY_DETECTION_URL: 'http://anomaly-detection-anomaly-detection:8000'
 
 
