cleanup before pull request

--- a/components/iot-consumer/manifests/iot-consumer-configmap.yaml
+++ b/components/iot-consumer/manifests/iot-consumer-configmap.yaml
@@ -15,7 +15,7 @@ data:
   TOPIC_LIGHT: iot-sensor/sw/light
   TEMPERATURE_ALERT_ENABLED: 'false'
   VIBRATION_ALERT_ENABLED: 'true'
-  VIBRATION_ANOMALY_ENABLED: 'false'
+  VIBRATION_ANOMALY_ENABLED: 'true'
   ANOMALY_DETECTION_URL: 'http://anomaly-detection-anomaly-detection:8000'
 
 
