--- a/components/kustomization.yaml
+++ b/components/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: iotdemo
 
 resources:
 - iotdemo-rolebinding.yaml
@@ -8,7 +9,7 @@ bases:
 - iot-consumer/manifests
 - iot-frontend/manifests
 - iot-software-sensor/manifests
-# - iot-software-sensor-quarkus/manifests
+- iot-software-sensor-quarkus/manifests
 
 # Open data hub is optional
 # - iot-anomaly-detection/manifests
@@ -16,4 +17,4 @@ bases:
 #the following causes an error if the rolebindings admin and view have already been created
 #- ../namespaces_and_operator_subscriptions/iotdemo
 
-namespace: iotdemo
+
